manifests/dev/mealie/Deployment-mealie.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/name: mealie
    app.kubernetes.io/version: v3.19.2
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: mealie
      app.kubernetes.io/name: mealie
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: mealie
        app.kubernetes.io/name: mealie
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: TZ
              value: Etc/UTC
            - name: BASE_URL
              value: https://mealie.home.kronkltd.net
            - name: DB_ENGINE
              value: postgres
            - name: POSTGRES_SERVER
              value: postgresql.postgresql
            - name: POSTGRES_PORT
              value: "5432"
            - name: POSTGRES_DB
              value: mealie
            - name: POSTGRES_USER
              value: mealie
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: mealie-database-password
          image: ghcr.io/mealie-recipes/mealie:v3.22.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/app/about
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: mealie
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/app/about
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /app/data
              name: data
      serviceAccountName: default
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie-mealie-data
        - name: mealie-database-password
          secret:
            secretName: mealie-database-password
