manifests/dev/mealie/Service-mealie.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/name: mealie
  type: ClusterIP
