manifests/dev/mealie/Ingress-mealie-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: mealie-local
  namespace: mealie
spec:
  ingressClassName: traefik
  rules:
    - host: mealie.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: mealie
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - mealie.home.kronkltd.net
      secretName: mealie-local-tls
